--- a/microsetta_interface/templates/sample.jinja2
+++ b/microsetta_interface/templates/sample.jinja2
@@ -200,11 +200,11 @@
             </div>
                 <div class="card mt-4 sample-card">
                     <div class="row">
-                        <div class="col-6">
+                        <div class="col-12 col-md-6">
                             <label for="sample_date" name="sample_date_label" class="sample-label">{{ _('Date of Sample Collection') }}*</label>
                             <input id="sample_date" name="sample_date" class="form-control" type="text" autocomplete="off" required\>
                         </div>
-                        <div class="col-6">
+                        <div class="col-12 col-md-6">
                             <label for="sample_time" name="sample_time_label" class="sample-label">{{ _('Time of Sample Collection') }}*</label>
                             <input id="sample_time" name="sample_time" class="form-control" type="text" value="{{ sample.time | e}}" autocomplete="off" required\>
                         </div>
