--- a/microsetta_interface/templates/sample.jinja2
+++ b/microsetta_interface/templates/sample.jinja2
@@ -232,10 +232,10 @@
                     </div>
                     <div class="row">
                         <div class="col-12 mt-4 text-end">
-                            {% if not sample.sample_remove_locked %}
+                            {% if not sample.sample_remove_locked and not admin_mod %}
                                 <button class="btn btn-white-red-border me-5" name="remove_button" onClick="return verifyDissociateSample();">{{ _('Remove') }}</button>
                             {% endif %}
-                            {% if sample.sample_edit_locked %}
+                            {% if sample.sample_edit_locked and not admin_mod %}
                             <span class="kit-tooltip-text">{{ _('Your sample has been received by our lab and can no longer be edited. Please <a href="mailto:microsetta@ucsd.edu">contact us</a> with any questions.') }}</span>
                             {% else %}
                                 <button class="btn btn-white-blue-border" name="cancel_button" onClick="return goToKits();">{{ _('Cancel') }}</button>
