--- a/microsetta_interface/templates/survey.jinja2
+++ b/microsetta_interface/templates/survey.jinja2
@@ -350,7 +350,7 @@
                 }
             },{
                 buttonText: "{{ _('Save & Next') }}",
-                styleClasses: "tmi-survey-button-blue col-6 col-2",
+                styleClasses: "tmi-survey-button-blue col-6 col-md-2",
                 type: "submit",
                 validateBeforeSubmit: true,
                 onSubmit: function(){
