--- a/microsetta_interface/templates/consents.jinja2
+++ b/microsetta_interface/templates/consents.jinja2
@@ -38,12 +38,12 @@
                                 <h2>{{ _('Survey') }}</h2>
                             </div>
                             <div class="consent-col col-end">
-                                <a href="#" class="consent-link">
+                                <a href="/accounts/{{ account_id }}/sources/{{ source_id }}/consents/{{ consents['survey']['consent_id'] }}/view" class="consent-link" target="_blank">
                                     <img src="/static/img/pdf.svg" height="20" width="20" class="me-1"/> View
                                 </a>
                             </div>
                             <div class="consent-col">
-                                <a href="#" class="consent-link">
+                                <a href="/accounts/{{ account_id }}/sources/{{ source_id }}/consents/{{ consents['survey']['consent_id'] }}/download" class="consent-link">
                                     <img src="/static/img/download.svg" height="20" width="20" class="me-1"/> Download
                                 </a>
                             </div>
@@ -51,6 +51,7 @@
                     </div>
                 </div>
             </div>
+            {% if consents['sample'] != None %}
             <div class="row">
                 <div class="col-12">
                     <div class="card p-4 mt-4">
@@ -72,6 +73,7 @@
                     </div>
                 </div>
             </div>
+            {% endif %}
         </div>
     </div>
 
