--- a/microsetta_interface/templates/source.jinja2
+++ b/microsetta_interface/templates/source.jinja2
@@ -70,7 +70,7 @@
                     <div class="card-survey-bg-progress mx-auto mb-4" style="background: conic-gradient(#006a96 {{ detail.answered }}deg, #c7c7c7 {{ detail.answered }}deg);">
                     {% else %}
                     <div class="card-survey-bg-progress mx-auto mb-4" style="background-color: #D9ECDB;">
-                        <img src="/static/img/survey_complete.png" class="survey-complete-icon" style="">
+                        <img src="/static/img/survey_complete.svg" class="survey-complete-icon" />
                     {% endif %}
                         <div class="card-survey-bg-blank">
                         {% if detail.new_tab %}
