--- a/microsetta_interface/templates/consents.jinja2
+++ b/microsetta_interface/templates/consents.jinja2
@@ -51,7 +51,7 @@
                     </div>
                 </div>
             </div>
-            {% if consents['sample'] != None %}
+            {% if consents['sample'] is not none %}
             <div class="row">
                 <div class="col-12">
                     <div class="card p-4 mt-4">
