--- a/microsetta_interface/templates/consents.jinja2
+++ b/microsetta_interface/templates/consents.jinja2
@@ -61,7 +61,7 @@
                             </div>
                             <div class="consent-col col-end">
                                 <a href="#" class="consent-link">
-                                    <img src="/static/img/pdf.svg" height="20" width="20" class="me-1"/> View
+                                    <img src="/static/img/pdf.svg" height="20" width="20" class="me-1"/> {{ _('View') }}
                                 </a>
                             </div>
                             <div class="consent-col">
