--- a/microsetta_interface/templates/consents.jinja2
+++ b/microsetta_interface/templates/consents.jinja2
@@ -66,7 +66,7 @@
                             </div>
                             <div class="consent-col">
                                 <a href="#" class="consent-link">
-                                    <img src="/static/img/download.svg" height="20" width="20" class="me-1"/> Download
+                                    <img src="/static/img/download.svg" height="20" width="20" class="me-1"/> {{ _('Download') }}
                                 </a>
                             </div>
                         </div>
