--- a/microsetta_interface/templates/source.jinja2
+++ b/microsetta_interface/templates/source.jinja2
@@ -121,7 +121,7 @@
                         {% endif %}
                     </div>
                     <div class="row text-center">
-                    {% if detail.answered == False %}
+                    {% if not detail.answered %}
                         <a class="survey-title" onClick="return takeExternalSurvey('/accounts/{{ account_id }}/sources/{{ source_id }}/take_survey?survey_template_id={{ detail.survey_template_id }}', '{{ detail.survey_template_title }}', '{{ detail.description }}');" href="/accounts/{{ account_id }}/sources/{{ source_id }}/take_survey?survey_template_id={{ detail.survey_template_id }}" target="_blank">
                             {{ detail.survey_template_title|e }}
                         </a>
